# SENA-yppm

./: CONTRIBUTING.md  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: ci.yml
data/inputs/: yppm_0.0.1.nc  yppm_0.0.12.nc  yppm_0.0.3.nc  yppm_0.0.6.nc  yppm_0.0.7.nc  yppm_0.0.8.nc  yppm_0.0.9.nc  yppm_0.1.15.nc  yppm_0.1.3.nc  yppm_0.1.6.nc  yppm_0.1.7.nc
ref/: CMakeLists.txt  README.md  build.sh
ref/cmake/: FindGPTL.cmake  compiler_flags_GNU_C.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_Fortran.cmake
ref/src/: CMakeLists.txt  interpolate.f90  print_affinity.c  yppm_core.F90  yppm_driver.F90  yppm_driver.f90
ref/test/: CMakeLists.txt
ref/test/src/: interpolateTest.f90
ref/test/test_input/: yppm_0.0.1.nl  yppm_0.0.12.nl  yppm_0.0.12_10.nl  yppm_0.0.12_20.nl  yppm_0.0.12_30.nl  yppm_0.0.3.nl  yppm_0.0.6.nl  yppm_0.0.7.nl  yppm_0.0.8.nl  yppm_0.0.9.nl  yppm_0.1.15.nl  yppm_0.1.3.nl  yppm_0.1.6.nl  yppm_0.1.7.nl  yppm_0.1.7_10.nl  yppm_0.1.7_20.nl  yppm_0.1.7_30.nl
ref/test/test_output/: yppm_0.0.1.test  yppm_0.0.12.test  yppm_0.0.12_10.test  yppm_0.0.12_20.test  yppm_0.0.12_30.test  yppm_0.0.3.test  yppm_0.0.6.test  yppm_0.0.7.test  yppm_0.0.8.test  yppm_0.0.9.test  yppm_0.1.15.test  yppm_0.1.3.test  yppm_0.1.6.test  yppm_0.1.7.test  yppm_0.1.7_10.test  yppm_0.1.7_20.test  yppm_0.1.7_30.test
ref/test/tools/: CMakeLists.txt
ref/unitTests/: interpolateTest.f90
